@@ -7,6 +7,8 @@ PHP                                                                        NEWS
     (nielsdos)
   . Fixed oss-fuzz #60011 (Mis-compilation of by-reference nullsafe operator).
     (ilutov)
+  . Fixed GH-11488 (Missing "Optional parameter before required" deprecation on
+    union null type). (ilutov)
 
 - DOM:
   . Fixed bug GH-11500 (Namespace reuse in createElementNS() generates wrong
